[tool.poetry]
name = "dbt-superset"
version = "0.3.4-1"
description = "Make dbt docs and Apache Superset talk to one another"
authors = ["Raghu Udiyar <raghusiddarth@gmail.com>"]
readme = "README.md"
repository = "https://github.com/raags/dbt-superset"

[tool.poetry.scripts]
dbt-superset = "dbt_superset.__init__:app"

[tool.poetry.dependencies]
# rags: downgrade to python 3.7
python = "^3.7"
typer = "^0.4.0"
pathlib = "^1.0.1"
"ruamel.yaml" = "^0.17.17"
# rags: Pin to this version to fix urllib3 openssl error
requests = "2.29.0"
bs4 = "^0.0.1"
Markdown = "^3.3.6"
sqlfluff = "^1.4.1"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
